--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -307,7 +307,7 @@ button {
 .banner_main {
      background: url(../images/banner.jpg);
      background-repeat: no-repeat;
-     min-height: 900px;
+     min-height: 700px;
      background-size: 100% 100%;
      display: flex;
      justify-content: center;
@@ -1321,5 +1321,11 @@ opacity: .2; }
      font-family: 'IcoMoon-Free';
      content: '\ea7d';
      font-size: 16px;
+}
+
+.alert-position {
+     position: absolute;
+     top: 17px;
+     right: 14px;
 }
    
