--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -779,7 +779,7 @@ button {
 /** contact section **/
 
 .contact {
-     background: url(../images/contact.png);
+     /* background: url(../images/contact.png); */
      background-repeat: no-repeat;
      background-size: 100% 100%;
      padding: 0px 0 90px 0;
@@ -793,7 +793,7 @@ button {
      left: 0;
      right: 0;
      content: "";
-     background: url(../images/con_cross.png);
+     /* background: url(../images/con_cross.png); */
      background-repeat: no-repeat;
      width: 100%;
      height: 100%;
