--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1137,7 +1137,8 @@ width: 50%; }
      .content .contents, .content .bg {
      width: 100%; } }
 .content .contents .form-group, .content .bg .form-group {
-     position: relative; }
+     position: relative;
+     padding-top: 10px; }
      .content .contents .form-group label, .content .bg .form-group label {
      position: absolute;
      top: 50%;
@@ -1147,9 +1148,8 @@ width: 50%; }
      -webkit-transition: .3s all ease;
      -o-transition: .3s all ease;
      transition: .3s all ease; }
-     .content .contents .form-group input, .content .bg .form-group input {
-     background: transparent;
-     border-bottom: 1px solid #ccc; }
+     .content .contents .form-group input, .content .bg .form-group input, .content .form-group textarea {
+     background: transparent; }
      .content .contents .form-group.first, .content .bg .form-group.first {
      border-top-left-radius: 7px;
      border-top-right-radius: 7px; }
@@ -1165,15 +1165,18 @@ width: 50%; }
      background: #fff; }
      .content .contents .form-group.field--not-empty label, .content .bg .form-group.field--not-empty label {
      margin-top: -25px; }
+     .content .contents .form-group.field--not-empty .alamat, .content .bg .form-group.field--not-empty .alamat {
+     margin-top: -75px; }
 .content .contents .form-control, .content .bg .form-control {
      border: none;
      padding: 0;
      font-size: 20px;
-     border-radius: 0; }
+     border-radius: 0;
+     border-bottom: 1px solid #ccc; }
      .content .contents .form-control:active, .content .contents .form-control:focus, .content .bg .form-control:active, .content .bg .form-control:focus {
      outline: none;
      -webkit-box-shadow: none;
-     box-shadow: none; }
+     box-shadow: none;}
 
 .content .bg {
 background-size: cover;
