--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,7 +21,7 @@
 @import url(font-awesome.min.css);
 @import url(meanmenu.css);
 @import url(owl.carousel.min.css);
-@import url(swiper.min.css);
+/* @import url(swiper.min.css); */
 @import url(slick.css);
 @import url(jquery.fancybox.min.css);
 @import url(jquery-ui.css);
@@ -1331,4 +1331,7 @@ opacity: .2; }
      top: 17px;
      right: 14px;
 }
-   
+
+.avoid-clicks {
+     pointer-events: none;
+}
