--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,7 +21,7 @@
 @import url(font-awesome.min.css);
 @import url(meanmenu.css);
 @import url(owl.carousel.min.css);
-/* @import url(swiper.min.css); */
+@import url(swiper.min.css);
 @import url(slick.css);
 @import url(jquery.fancybox.min.css);
 @import url(jquery-ui.css);
@@ -336,8 +336,8 @@ button {
 
 .text-bg h1 {
      color: #fff;
-     font-size: 63px;
-     line-height: 73px;
+     font-size: 25px;
+     /*line-height: 10px;*/
      padding-bottom: 30px;
 }
 
@@ -1331,7 +1331,4 @@ opacity: .2; }
      top: 17px;
      right: 14px;
 }
-
-.avoid-clicks {
-     pointer-events: none;
-}
+   
