--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,7 +39,7 @@ html {
 
 body {
      color: #666666;
-     font-size: 14px;
+     font-size: 12px;
      font-family: 'Poppins', sans-serif;
      line-height: 1.80857;
      font-weight: normal;
@@ -126,7 +126,18 @@ li,
 ol {
      margin: 0px;
      padding: 0px;
-     list-style: none;
+     /* list-style: none; */
+}
+
+.list-bobot div {
+     text-align: center;
+}
+
+li::marker {
+     font-family: 'Baloo Chettan', cursive;
+     font-size: 26px;
+     color: #111111;
+     padding-left: 5px;
 }
 
 p {
@@ -305,7 +316,7 @@ button {
 /** banner section **/
 
 .banner_main {
-     background: url(../images/banner.jpg);
+     background: url(../images/banner.png);
      background-repeat: no-repeat;
      min-height: 700px;
      background-size: 100% 100%;
@@ -1331,4 +1342,97 @@ opacity: .2; }
      top: 17px;
      right: 14px;
 }
+
+.diagnosa-form h1 {
+     cursor: pointer;
+     padding-left: 10px;
+}
+/* MAIN */
+/* =============================================== */
+.rad-label {
+     display: flex;
+     align-items: center;
+   
+     border-radius: 100px;
+     padding: 14px 16px;
+     margin: 10px 0;
+   
+     cursor: pointer;
+     transition: .3s;
+   }
+   
+   .rad-label:hover,
+   .rad-label:focus-within {
+     background: hsla(0, 0%, 80%, .14);
+   }
+   
+   .rad-input {
+     position: absolute;
+     left: 0;
+     top: 0;
+     width: 1px;
+     height: 1px;
+     opacity: 0;
+     z-index: -1;
+   }
+   
+   .rad-design {
+     width: 15px;
+     height: 15px;
+     border-radius: 100px;
+   
+     background: linear-gradient(to right bottom, hsl(220, 96%, 21%), hsl(220, 97%, 62%));
+     position: relative;
+   }
+   
+   .rad-design::before {
+     content: '';
+   
+     display: inline-block;
+     width: inherit;
+     height: inherit;
+     border-radius: inherit;
+   
+     background: hsl(0, 0%, 90%);
+     transform: scale(1.1);
+     transition: .3s;
+   }
+   
+   .rad-input:checked+.rad-design::before {
+     transform: scale(0);
+   }
+   
+   .rad-text {
+     color: hsl(0, 0%, 40%);
+     margin-left: 14px;
+     letter-spacing: 3px;
+     text-transform: uppercase;
+     font-size: 12px;
+     font-weight: 900;
+
+     transition: .3s;
+   }
+   
+   .rad-input:checked~.rad-text {
+     color: hsl(220, 96%, 21%);
+   }
+   
+   
+   /* ABS */
+   /* ====================================================== */
+   .abs-site-link {
+     position: fixed;
+     bottom: 40px;
+     left: 20px;
+     color: hsla(0, 0%, 0%, 0.5);
+     font-size: 16px;
+   }
+
+   .detail-bobot {
+     cursor: pointer;
+     align-self: center;
+     font-size: 20px;
+     margin: -8px 0px 0px 10px;
+     color: hsl(220, 96%, 21%);
+   }
    
