--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -316,7 +316,7 @@ button {
 /** banner section **/
 
 .banner_main {
-     background: url(../images/banner.png);
+     background: url(../images/banner-2.png);
      background-repeat: no-repeat;
      min-height: 700px;
      background-size: 100% 100%;
